Fix line breaks in info window, styling fixes.

--- a/src/index.css
+++ b/src/index.css
@@ -9,14 +9,17 @@ body {
 .info-window {
   background: rgba(255, 255, 255, 0.9);
   box-shadow: 5px 5px 20px #888888;
+  box-sizing: border-box;
   min-height: 400px;
   padding: 20px;
   position: fixed;
   right: 20px;
   top: 60px;
   transition: all .5s ease-in-out;
-  width: 25vw;
+  width: 33%;
   z-index: 2;
+  max-height: 80%;
+  overflow: scroll;
 }
 
 @media (max-width: 768px){
@@ -33,7 +36,7 @@ body {
     left: 0;
     top: 40%;
     transition: all .5s ease-in-out;
-    width: auto;
+    width: 100%;
     z-index: 2;
   }
 }
@@ -41,6 +44,8 @@ body {
 .close {
   float: right;
   cursor: pointer;
+  font-size: 30px;
+  line-height: 10px;
 }
 
 .error { 
@@ -53,6 +58,7 @@ body {
   align-items: center;
   justify-content: center;
   position: fixed;
+  background: rgba(255, 255, 255, 0.75);
 }
 
 .error div {
@@ -99,7 +105,7 @@ textarea {
   border: 0;
   box-shadow: 5px 5px 20px #888888;
   margin: 0px;
-  padding: 5px;
+  padding: 10px 15px;
   background: #2C81BA;
   transition: all .3s ease;
   color: #fff; 
@@ -107,6 +113,7 @@ textarea {
   margin: 0 auto;
   -webkit-appearance: none;
   font-family: 'lato', Helvetica, sans-serif;
+  width: 175px;
 }
 
 .toggle-cms {
@@ -120,11 +127,12 @@ textarea {
   border: 0;
   box-shadow: 5px 5px 20px #888888;
   margin: 0px;
-  padding: 5px;
+  padding: 10px 15px;
   background: #2C81BA;
   transition: all .3s ease;
   color: #fff;
   font-family: 'lato', Helvetica, sans-serif;
+  width: 175px;
 }
 
 .toggle-cms:disabled, 
@@ -136,6 +144,15 @@ textarea {
 .toggle-cms:hover {
   background: #3498db;
 }
+
+.success-message {
+  margin: 30px auto;
+  text-align: center;
+}
+
+/*
+* React CSS Transitions classes
+*/
 
 .fade-appear {
   opacity: 0.01;
@@ -164,6 +181,10 @@ textarea {
   transition: opacity 300ms ease-in;
 }
 
+/*
+* Loading Animation from: http://tobiasahlin.com/spinkit/
+*/
+
 .loading-graphic {
   width: 100vw;
   height: 100vh;
@@ -176,10 +197,6 @@ textarea {
   background: rgba(255, 255, 255, 0.75);
   z-index: 3
 }
-
-/*
-* Loading Animation from: http://tobiasahlin.com/spinkit/
-*/
 
 .sk-folding-cube {
   margin: 20px auto;
